backend-v1/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1-deployment
  namespace: myproject
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
      version: v1
  template:
    metadata:
      labels:
        component: backend
        version: v1
    spec:
      containers:
        - image: 172.30.1.1:5000/myproject/backend-v1:latest
          name: backend-v1
          ports:
            - containerPort: 8080
