backend-v1/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v1-service
  namespace: myproject
spec:
  type: ClusterIP
  ports:
    - name: backend-v1
      port: 6001
      protocol: TCP
      targetPort: 8080
  selector:
    component: backend
    version: v1
