backend-v1/k8s/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    component: backend
    version: v1
  name: backend-v1-route
  namespace: myproject
spec:
  # try this url: http://backend-v1-route-myproject.192.168.99.101.nip.io/
  port:
    targetPort: backend-v1
  to:
    kind: Service
    name: backend-v1-service
    weight: 100
